# WheeledBipedSim

./: .dockerignore  Dockerfile  README.md  model.sdf
wheeled_biped_control/: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py  upright_controller.xml
wheeled_biped_control/config/: controllers.yaml
wheeled_biped_control/include/wheeled_biped_control/: upright_controller.hpp
wheeled_biped_control/launch/: basic_control.launch.py
wheeled_biped_control/src/: upright_controller.cpp  upright_controller_parameter.yaml
wheeled_biped_description/: package.xml  setup.cfg  setup.py
wheeled_biped_description/config/: bridge.yaml
wheeled_biped_description/launch/: simulation.launch.py
wheeled_biped_description/models/: empty.sdf  model.gazebo  model.gazebo.xacro  model.sdf  model.urdf.xacro  ros2_control.xacro
